fixed alignment

--- a/css/index.css
+++ b/css/index.css
@@ -62,16 +62,16 @@ body {
     font-size: 1.2em;
 }
 .links {
-    display: flex ;
-    justify-content:space-evenly;
-
+    /* display: flex ;
+    justify-content:space-evenly; */
+    text-align: center;
     background-color: var(--lightB2);
     margin-top: 8%;
     height: calc(100vh/100 * 20);
     border-radius: 1.5em;
     width: 85%;
     margin-inline: auto;
-    padding: 5%;
+    padding: 2%;
 }
 .projects a:hover {
     color: blue;
@@ -111,6 +111,7 @@ body {
 }
 
 .box {
+    padding: 5%;
     margin-top: 10%;
     height: calc(100vh/100 * 65);
     text-align: center;
